# stellAIverse-contracts

./: Cargo.toml  README.md
.github/workflows/: ci.yml  formal-verification.yml
contracts/agent-nft/proptest-regressions/: test.txt
contracts/agent-nft/src/: lib.rs  test.rs
contracts/agent-token/src/: lib.rs
contracts/amm/: Cargo.toml
contracts/amm/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/bridge-manager/src/: lib.rs  test.rs
contracts/compliance-integration/src/: lib.rs
contracts/execution-hub/: Cargo.toml
contracts/execution-hub/proptest-regressions/: prop_tests.txt
contracts/execution-hub/src/: lib.rs  prop_tests.rs
contracts/execution-hub/test_snapshots/test/: test_admin_transfer.1.json  test_execution_counter_increment.1.json  test_get_history.1.json  test_initialization.1.json  test_rate_limiting.1.json  test_register_and_get_rule.1.json  test_replay_protection.1.json
contracts/faucet/src/: lib.rs
contracts/governance/src/: lib.rs
contracts/identity-did/: Cargo.toml  README.md
contracts/identity-did/src/: lib.rs  tests.rs
contracts/lifecycle-manager/src/: errors.rs  lib.rs  test.rs  types.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: atomic.rs  dynamic_fee.md  lib.rs  payment_types.rs  payments.rs  prop_tests.rs  storage.rs  test_lease.rs  test_sealed.rs  test_sealed_refund.rs
contracts/metrics-aggregator/: Cargo.toml
contracts/metrics-aggregator/src/: lib.rs  storage.rs  test.rs  types.rs
contracts/oracle/src/: lib.rs  tests.rs  types.rs
contracts/prediction-market/: Cargo.toml  README.md
contracts/prediction-market/src/: lib.rs  lib.rs.backup  storage.rs  test.rs  types.rs
contracts/synthetic-agent-eth/contracts/: SyntheticAgent.sol
contracts/threshold-agent/src/: lib.rs  test.rs  types.rs
contracts/transaction-coordinator/src/: lib.rs
contracts/verifiable-credentials/: Cargo.toml
contracts/verifiable-credentials/src/: lib.rs
contracts_backup/: README.md
docs/: PROPERTY_SPECS.md  rate_limiting.md
formal-verification/: ASSUMPTIONS.md  COUNTEREXAMPLE_GUIDE.md  Cargo.toml  README.md  run-formal-verification.sh
formal-verification/kani_proofs/: agent_nft_proofs.rs  execution_hub_proofs.rs  marketplace_proofs.rs
formal-verification/specs/: agent_nft.md  agent_nft.spec.cvl  execution_hub.md  execution_hub.spec.cvl  marketplace.md  marketplace.spec.cvl
formal-verification/src/: lib.rs
lib/src/: admin.rs  atomic.rs  errors.rs  lib.rs  proxy.rs  types.rs  validation.rs
shared/src/: lib.rs
tests/: proxy_tests.rs
