[workspace]
members = [
    "contracts/agent-nft",
    "contracts/agent-token",
    "contracts/execution-hub",
    "contracts/marketplace",
    "contracts/evolution",
    "contracts/oracle",
    "contracts/faucet",
    "contracts/governance",
    "contracts/transaction-coordinator",
    "contracts/bridge-manager",
    "contracts/metrics-aggregator",
    "contracts/prediction-market",
    "lib",
    "shared",
]

resolver = "2"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
debug = false
strip = "symbols"
overflow-checks = true

[profile.release-with-logs]
inherits = "release"
debug = true
strip = "none"

[workspace.dependencies]
soroban-sdk = "22.0.10"
