[package]
name = "amm"
version = "0.1.0"
description = "Constant product AMM for agent token pairs in StellAIverse"
authors = ["StellAIverse Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
