[package]
name = "marketplace"
version = "0.1.0"
description = " contract for StellAIverse"
authors = ["StellAIverse Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
stellai_lib = { path = "../../lib" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1.4.0"

[features]
testutils = ["soroban-sdk/testutils"]
