[package]
name = "metrics-aggregator"
version = "0.1.0"
description = "Real-time metrics and analytics dashboard contract for StellAIverse"
authors = ["StellAIverse Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
stellai_lib = { path = "../../lib" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
